--- a/portfolio/css/media.css
+++ b/portfolio/css/media.css
@@ -29,4 +29,8 @@
 		text-align: center;
 	}
 
+	div.work-wrapper .work-item {
+		width: 100%;
+	}
+
 }
