--- a/portfolio/css/reset.css
+++ b/portfolio/css/reset.css
@@ -4,7 +4,6 @@ html {
     height: 100%;
     padding: 0;
 	background: #2a2a2a;
-	overflow: hidden;
 }
 
 * {
